# llmrelay

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
admin-api/: pyproject.toml
admin-api/app/: config.py  database.py  main.py
admin-api/app/models/: __init__.py  models.py
admin-api/app/routers/: analytics.py  api_keys.py  projects.py
admin-api/app/schemas/: __init__.py  schemas.py
admin-ui/: package-lock.json  package.json
admin-ui/app/: layout.tsx  page.tsx
admin-ui/app/keys/: page.tsx
admin-ui/app/projects/: page.tsx
admin-ui/lib/: api.ts
deploy/: prometheus.yml
migrations/: 001_initial.sql
proxy/: go.mod  go.sum
proxy/cmd/proxy/: main.go
proxy/internal/auth/: middleware.go
proxy/internal/cache/: cache.go  embedder.go  hash.go  redis.go  semantic.go
proxy/internal/config/: config.go  models.go
proxy/internal/middleware/: middleware.go
proxy/internal/observability/: metrics.go
proxy/internal/router/: router.go
proxy/internal/upstream/: anthropic.go  google.go  groq.go  openai.go  provider.go
